add beginning of insert

--- a/linkedList/Makefile
+++ b/linkedList/Makefile
@@ -2,9 +2,12 @@
 # Makefile
 #
 
-linkedList: linkedList.c
-	clang -ggdb3 -O0 -std=c11 -Wall -Werror -o linkedList linkedList.c
+insertAtBeginning: insertAtBeginning.c
+	clang -ggdb3 -O0 -std=c11 -Wall -Werror -o insertAtBeginning insertAtBeginning.c
+
+insert: insert.c
+	clang -ggdb3 -O0 -std=c11 -Wall -Werror -o insert insert.c
 
 clean:
-	rm -f *.o a.out core linkedList log.txt
+	rm -f *.o a.out core insertAtBeginning insert log.txt
 	rm -rf *.dSYM
