--- a/linkedList/Makefile
+++ b/linkedList/Makefile
@@ -8,6 +8,9 @@ insertAtBeginning: insertAtBeginning.c
 insert: insert.c
 	clang -ggdb3 -O0 -std=c11 -Wall -Werror -o insert insert.c
 
+delete: delete.c
+	clang -ggdb3 -O0 -std=c11 -Wall -Werror -o delete delete.c
+
 clean:
-	rm -f *.o a.out core insertAtBeginning insert log.txt
+	rm -f *.o a.out core insertAtBeginning insert delete log.txt
 	rm -rf *.dSYM
