add call by reference

--- a/pointers/Makefile
+++ b/pointers/Makefile
@@ -8,6 +8,9 @@ pointers: pointers.c
 # pointers: pointers.c
 # 	clang -ggdb3 -O0 -std=c11 -Wall -Werror -o pointers pointers.c -lm
 
+callByReference: callByReference.c
+	clang -ggdb3 -O0 -std=c11 -Wall -Werror -o callByReference callByReference.c -lm
+
 clean:
-	rm -f *.o a.out core pointers log.txt
+	rm -f *.o a.out core pointers callByReference log.txt
 	rm -rf *.dSYM
