add selection sort

--- a/sorting/Makefile
+++ b/sorting/Makefile
@@ -6,6 +6,9 @@
 insertionSort: insertionSort.c
 	clang -ggdb3 -O0 -std=c11 -Wall -Werror -o insertionSort insertionSort.c -lm
 
+selectionSort: selectionSort.c
+	clang -ggdb3 -O0 -std=c11 -Wall -Werror -o selectionSort selectionSort.c -lm
+
 clean:
-	rm -f *.o a.out core insertionSort log.txt
+	rm -f *.o a.out core insertionSort selectionSort log.txt
 	rm -rf *.dSYM
